--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+tr,
+td {
+    border: 1px solid #dddddd;
+    height: 2rem;
+    font-weight: bold;
+    border-width: 2px;
+    border-color: rgb(128, 128, 128);
+}
